--- a/public/contact.html
+++ b/public/contact.html
@@ -33,15 +33,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="header">
 		   <div class="col-sm-8 header-left">
 					 <div class="logo">
-						<a href="index.html"><img src="images/logo.png" alt=""/></a>
 					 </div>
 					 <div class="menu">
 						  <a class="toggleMenu" href="#"><img src="images/nav.png" alt="" /></a>
 						    <ul class="nav" id="nav">
-						    	<li class="active"><a href="index.html">Home</a></li>
+						    	<li class="active"><a href="index.html">Home</a></li><!-- 
 						    	<li><a href="rooms.html">Rooms</a></li>
 						    	<li><a href="news.html">News</a></li>
-						    	<li><a href="gallery.html">Gallery</a></li>
+						    	<li><a href="gallery.html">Gallery</a></li> -->
 						    	<li><a href="404.html">Blog</a></li>
 								<div class="clearfix"></div>
 							</ul>
