Website Bootstrap changes

--- a/public/contact.html
+++ b/public/contact.html
@@ -33,6 +33,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="header">
 		   <div class="col-sm-8 header-left">
 					 <div class="logo">
+						<a href="index.html"><img src="images/logo.jpg" alt=""/></a>
 					 </div>
 					 <div class="menu">
 						  <a class="toggleMenu" href="#"><img src="images/nav.png" alt="" /></a>
