login + body parser

--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
             <div id="loginContainer">
                 <a href="#" id="loginButton"><img src="images/login.png"><span>Login</span></a>
                 <div id="loginBox">
-                    <form id="loginForm">
+                    <form id="loginForm" method="POST">
                         <fieldset id="body">
                             <fieldset>
                                 <label for="email">Email Address</label>
