--- a/public/index.html
+++ b/public/index.html
@@ -126,7 +126,7 @@
                                 <label for="password">Password</label>
                                 <input type="password" name="password" id="password">
                             </fieldset>
-                            <input type="submit" id="login" value="Sign in">
+                            <input type="button" id="login" value="Sign in">
                             <label for="checkbox">
                                 <input type="checkbox" id="checkbox"> <i>Remember me</i></label>
                         </fieldset>
